# rubicon

./: Makefile  main.py  pyproject.toml
datasets/: __init__.py  mnist.py  sine.py
experiments/: 0.ipynb  mnist.ipynb  sine.ipynb
rubicon/common/: __init__.py  types.py
rubicon/nns/: __init__.py  _base.py  convnet.py  mlp.py
rubicon/nns/losses/: __init__.py  _base.py  cross_entropy.py  kare.py  mse.py
rubicon/nns/metrics/: __init__.py  _base.py  accuracy.py  ca.py  mae.py
rubicon/ntk/: __init__.py  ntk.py
rubicon/utils/: __init__.py  jax.py  kare.py  losses.py  metrics.py  prints.py
tests/: test_datasets.py
