[project]
name = "rubicon"
version = "0.1.0"
description = "A collection of tools for neural networks and kernel methods research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neural-tangents==0.6.5",
    "optax>=0.2.5",
    "tensorflow-datasets>=4.9.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "black>=25.9.0",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 79
